--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.6",
+    "axios": "^0.26.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "sweetalert2": "^11.4.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
