--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@nuxtjs/axios": "^5.13.6",
     "axios": "^0.26.1",
     "core-js": "^3.19.3",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "nuxt": "^2.15.8",
     "sweetalert2": "^11.4.8",
+    "toastr": "^2.1.4",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
